# capslock_remap_windows

./: CapsLockCtrlEscape.ahk  CapsLockCtrlEscape_ahkv2.ahk  Cargo.toml
src/: main.rs  process_monitor.rs
