[package]
name = "caps_lock_remap"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
futures = "0.3.30"
serde = { version = "1.0.201", features = ["derive"] }
sysinfo = { version = "0.30.7", default-features = false }
tokio = { version = "1.37.0", features = ["rt", "sync", "macros"] }
wmi = "0.13.3"
